--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "zingchart-angular": "^1.0.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@angular/compiler-cli": "~12.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/zingchart": "^2.8.3",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
