--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/font-awesome/css/font-awesome.css"
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/aos/dist/aos.css",
+              "src/styles.scss"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [ "src/styles" ]
