--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "angular-plotly.js": "^4.0.0",
     "aos": "^2.3.4",
     "font-awesome": "^4.7.0",
+    "plotly.js": "^1.58.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zingchart-angular": "^1.0.1",
@@ -33,6 +35,7 @@
     "@types/aos": "^3.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/plotly.js": "^1.54.10",
     "@types/zingchart": "^2.8.3",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
