--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.0",
+    "@angular/cdk": "^12.0.0",
     "@angular/common": "~12.0.0",
     "@angular/compiler": "~12.0.0",
     "@angular/core": "~12.0.0",
     "@angular/forms": "~12.0.0",
+    "@angular/material": "^12.0.0",
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
     "angular-plotly.js": "^4.0.0",
     "aos": "^2.3.4",
     "font-awesome": "^4.7.0",
+    "material": "^0.4.3",
     "plotly.js": "^1.58.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
-    "zingchart-angular": "^1.0.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -36,7 +38,6 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@types/plotly.js": "^1.54.10",
-    "@types/zingchart": "^2.8.3",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
