--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng build --configuration production --output-hashing=none --deploy-url broad-covid-dashboard/"
+    "deploy": "ng build --configuration production --output-hashing=none"
   },
   "private": true,
   "dependencies": {
