--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,10 +1,9 @@
-name: Deploy Website
+name: PR Test
 
 on:
   pull_request:
     branches:
-      - master
-  workflow_dispatch:
+      - main
 
 jobs:
   pr-test:
@@ -30,9 +29,3 @@ jobs:
 
       - name: Install and Build with Prod config
         run: npm install && npm run deploy
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.4
-        with:
-          branch: gh-pages
-          folder: docs
