--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -36,3 +36,6 @@ jobs:
         with:
           branch: gh-pages
           folder: docs
+          clean: true
+          clean-exclude: |
+            CNAME
