--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,13 +7,18 @@ on:
   workflow_dispatch:
 
 jobs:
-  pr-test:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           persist-credentials: false
+
+      - name: Setup NodeJS
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
 
       - name: Cache node_modules
         uses: actions/cache@v2
@@ -22,11 +27,6 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-
-      - name: Setup NodeJS
-        uses: actions/checkout@v2
-        with:
-          node-version: '14'
 
       - name: Install and Build with Prod config
         run: npm install && npm run deploy
