Streamline deployment followup (#3)
* Use main as the default branch name.

* Make sure the deployment branch is clean.

* Fix minor issues with the Github Actions.

* Only run deployment on push to main.

* Add a badge.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,18 +1,24 @@
-name: PR Test
+name: Deploy Website
 
 on:
-  pull_request:
+  push:
     branches:
-      - master
+      - main
+  workflow_dispatch:
 
 jobs:
-  pr-test:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           persist-credentials: false
+
+      - name: Setup NodeJS
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
 
       - name: Cache node_modules
         uses: actions/cache@v2
@@ -22,10 +28,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Setup NodeJS
-        uses: actions/checkout@v2
-        with:
-          node-version: '14'
-
       - name: Install and Build with Prod config
         run: npm install && npm run deploy
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages
+          folder: docs
+          clean: true
+          clean-exclude: |
+            CNAME
