--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,10 +1,9 @@
-name: Deploy Website
+name: PR Test
 
 on:
   pull_request:
     branches:
-      - master
-  workflow_dispatch:
+      - main
 
 jobs:
   pr-test:
@@ -15,6 +14,11 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: Setup NodeJS
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
       - name: Cache node_modules
         uses: actions/cache@v2
         with:
@@ -23,16 +27,5 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Setup NodeJS
-        uses: actions/checkout@v2
-        with:
-          node-version: '14'
-
       - name: Install and Build with Prod config
         run: npm install && npm run deploy
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.4
-        with:
-          branch: gh-pages
-          folder: docs
